--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
 
                             <div class="title-wrapper">
                                 <h5 class="h5">Microsoft Office</h5>
-                                <data value="50">50%</data>
+                                <data value="90">90%</data>
                             </div>
 
                             <div class="skill-progress-bg">
@@ -715,7 +715,7 @@
 
                     <ul class="project-list">
 
-                        <li class="project-item  active" data-filter-item data-category="upgrad">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://upgrad.verification.givemycertificate.com/v/1309e812-709f-40fd-9d55-b0360d3f8136">
 
                                 <figure class="project-img">
@@ -733,7 +733,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="devtown">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.cert.devtown.in/verify/Y2sfV">
 
                                 <figure class="project-img">
@@ -751,7 +751,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Hackerrank">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.hackerrank.com/certificates/iframe/24428a532a08">
 
                                 <figure class="project-img">
@@ -769,7 +769,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="others">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://moonshot.scaler.com/s/sl/VQPxZqKGWb?_gl=1*12n6fj5*FPAU*NDYxNzQ4NDgzLjE3Mjc2NDQ3MTA.*_ga*NTkwMDk3MDQ3LjE3Mjc2NDQ3MDc.*_ga_53S71ZZG1X*MTcyNzY5NzkwOC41LjEuMTcyNzcwMDY2My4wLjAuMjcwMDYxMTUy">
 
                                 <figure class="project-img">
@@ -787,7 +787,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="upgrad">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.hackerrank.com/certificates/iframe/64e3c4e285aa">
 
                                 <figure class="project-img">
@@ -805,7 +805,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="others">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.mygreatlearning.com/certificate/UOFLSJLH">
 
                                 <figure class="project-img">
@@ -823,7 +823,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Hackerrank">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.hackerrank.com/certificates/iframe/d953084beb16">
 
                                 <figure class="project-img">
@@ -841,7 +841,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="devtown">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://www.cert.devtown.in/verify/o47Ki">
 
                                 <figure class="project-img">
@@ -859,7 +859,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="upgrad">
+                        <li class="project-item  active" data-filter-item data-category="Certificate">
                             <a href="https://upgrad.verification.givemycertificate.com/v/59e23e85-a5d0-4324-8cab-b0a46c9f11cb">
 
                                 <figure class="project-img">
