--- a/index.html
+++ b/index.html
@@ -672,18 +672,71 @@
             <!--
         - #PORTFOLIO
       -->
+<article class="portfolio" data-page="portfolio">
 
-            <article class="Certificate" data-page="portfolio">
+        <header>
+          <h2 class="h2 article-title">Certificate</h2>
+        </header>
 
-                <header>
-                    <h2 class="h2 article-title">Certificate</h2>
-                </header>
+        <section class="projects">
 
-                <section class="projects">
+          <ul class="filter-list">
+
+            <li class="filter-item">
+              <button class="active" data-filter-btn>All</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>HackerRank</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Upgrad</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>Others</button>
+            </li>
+
+          </ul>
+
+          <div class="filter-select-box">
+
+            <button class="filter-select" data-select>
+
+              <div class="select-value" data-selecct-value>Select category</div>
+
+              <div class="select-icon">
+                <ion-icon name="chevron-down"></ion-icon>
+              </div>
+
+            </button>
+
+            <ul class="select-list">
+
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>HackerRank</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Upgrad</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Others</button>
+              </li>
+
+            </ul>
+
+          </div>
 
                     <ul class="project-list">
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Upgrad">
                             <a href="https://upgrad.verification.givemycertificate.com/v/1309e812-709f-40fd-9d55-b0360d3f8136">
 
                                 <figure class="project-img">
@@ -701,7 +754,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Others">
                             <a href="https://www.cert.devtown.in/verify/Y2sfV">
 
                                 <figure class="project-img">
@@ -719,7 +772,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="HackerRank">
                             <a href="https://www.hackerrank.com/certificates/iframe/24428a532a08">
 
                                 <figure class="project-img">
@@ -737,7 +790,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Others">
                             <a href="https://moonshot.scaler.com/s/sl/VQPxZqKGWb?_gl=1*12n6fj5*FPAU*NDYxNzQ4NDgzLjE3Mjc2NDQ3MTA.*_ga*NTkwMDk3MDQ3LjE3Mjc2NDQ3MDc.*_ga_53S71ZZG1X*MTcyNzY5NzkwOC41LjEuMTcyNzcwMDY2My4wLjAuMjcwMDYxMTUy">
 
                                 <figure class="project-img">
@@ -755,7 +808,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="HackerRank">
                             <a href="https://www.hackerrank.com/certificates/iframe/64e3c4e285aa">
 
                                 <figure class="project-img">
@@ -773,7 +826,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Others">
                             <a href="https://www.mygreatlearning.com/certificate/UOFLSJLH">
 
                                 <figure class="project-img">
@@ -791,7 +844,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="HackerRank">
                             <a href="https://www.hackerrank.com/certificates/iframe/d953084beb16">
 
                                 <figure class="project-img">
@@ -809,7 +862,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Others">
                             <a href="https://www.cert.devtown.in/verify/o47Ki">
 
                                 <figure class="project-img">
@@ -827,7 +880,7 @@
                             </a>
                         </li>
 
-                        <li class="project-item  active" data-filter-item data-category="Certificate">
+                        <li class="project-item  active" data-filter-item data-category="Upgrad">
                             <a href="https://upgrad.verification.givemycertificate.com/v/59e23e85-a5d0-4324-8cab-b0a46c9f11cb">
 
                                 <figure class="project-img">
