--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <header>
           <h2 class="h2 article-title">Certificate</h2>
         </header>
-
+<div
         <section class="projects">
 
           <ul class="filter-list">
