--- a/index.html
+++ b/index.html
@@ -687,15 +687,15 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>HackerRank</button>
+              <button class="active"data-filter-btn>HackerRank</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Upgrad</button>
+              <button class="active" data-filter-btn>Upgrad</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Others</button>
+              <button class="active" data-filter-btn>Others</button>
             </li>
 
           </ul>
