--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="contact-info">
                             <p class="contact-title">Location</p>
 
-                            <address>Jaspur, India</address>
+                            <address>Jaspur India</address>
                         </div>
 
                     </li>
@@ -126,6 +126,12 @@
                 <div class="separator"></div>
 
                 <ul class="social-list">
+
+                    <li class="social-item">
+                        <a href="https://github.com/harshmadhur32" class="https://github.com/harshmadhur32">
+                            <ion-icon name="logo-Github"></ion-icon>
+                        </a>
+                    </li>
 
                     <li class="social-item">
                         <a href="https://www.facebook.com/harsh.madhur.96/" class="https://www.facebook.com/harsh.madhur.96/">
@@ -142,6 +148,12 @@
                     <li class="social-item">
                         <a href="https://www.instagram.com/harsh.madhur32/" class="https://www.instagram.com/harsh.madhur32/">
                             <ion-icon name="logo-instagram"></ion-icon>
+                        </a>
+                    </li>
+
+                    <li class="social-item">
+                        <a href="https://in.linkedin.com/in/harsh-madhur-631953203" class="https://in.linkedin.com/in/harsh-madhur-631953203">
+                            <ion-icon name="logo-Linkedin"></ion-icon>
                         </a>
                     </li>
 
