--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
                         <li class="skills-item">
 
                             <div class="title-wrapper">
-                                <h5 class="h5">Branding</h5>
+                                <h5 class="h5">Coding</h5>
                                 <data value="90">90%</data>
                             </div>
 
@@ -669,7 +669,7 @@
                             </div>
 
                             <div class="skill-progress-bg">
-                                <div class="skill-progress-fill" style="width: 50%;"></div>
+                                <div class="skill-progress-fill" style="width: 90%;"></div>
                             </div>
 
                         </li>
