--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
                 <section class="clients">
 
-                    <h3 class="h3 clients-title">Clients</h3>
+                    <h3 class="h3 clients-title">language</h3>
 
                     <ul class="clients-list has-scrollbar">
 
